# Primordial

./: .gitignore  Cargo.toml  LICENSE  README.md  config.yaml  python_match.yaml  python_match_REAL.yaml  python_match_REAL_v2.yaml  python_match_REAL_v3.yaml  python_match_REAL_v4.yaml  python_match_REAL_v5.yaml  python_match_REAL_v6.yaml  python_match_final.yaml  python_match_gen100.yaml  python_match_v2.yaml  python_match_v3.yaml  python_match_v4.yaml  python_match_v5.yaml  schema.sql  test_web.py
benches/: simulation.rs
configs/: fase2_week1.yaml  fase2_week3_4.yaml  fase2_week5.yaml
examples/: analyze_detailed.rs  compare_config.rs  debug_brain.rs  debug_brain_no_instincts.rs  debug_repro.rs  diagnose_predation.rs  minimal.rs  test_500_steps.rs  test_brain_growth.rs  test_brain_growth_long.rs  test_cognitive_tasks.rs  test_default_only.rs  test_layer_add.rs  test_realistic_terrain.rs
queries/: territorio_popolazione.sql
scripts/: setup_db.sh
src/: checkpoint.rs  config.rs  evolution.rs  grid.rs  lib.rs  main.rs  memory_monitor.rs  organism.rs  stats.rs  world.rs
src/analysis/: behavior_tracker.rs  cognitive_metrics.rs  export.rs  mod.rs  survival.rs
src/database/: mod.rs
src/ecology/: depletion.rs  dynamic_obstacles.rs  environment_manager.rs  food_patches.rs  food_types.rs  large_prey.rs  mod.rs  predation.rs  seasons.rs  terrain.rs
src/genetics/: crossover.rs  diversity.rs  mod.rs  phylogeny.rs  sex.rs
src/gui/: app.rs  commands.rs  logging.rs  mod.rs  sim_thread.rs  snapshot.rs
src/gui/views/: brain_view.rs  control_panel.rs  mod.rs  settings_panel.rs  stats_panel.rs  world_view.rs
src/neural/: crossover.rs  hebbian.rs  memory_consolidation.rs  mod.rs  mutations.rs  network.rs
src/shared/: commands.rs  mod.rs  sim_thread.rs  snapshot.rs
src/web/: mod.rs  routes.rs  server.rs  state.rs  websocket.rs
static/: index.html
static/css/: style.css
static/js/: api.js  canvas.js  charts.js  main.js  state.js  ui.js  websocket.js
tests/: integration.rs
