[package]
name = "primordial"
version = "2.0.0"
edition = "2021"
authors = ["Gabriele (dbowie)"]
description = "High-performance ecosystem simulator with NEAT-style neural networks"
license = "MIT"

[dependencies]
# Core math
ndarray = "0.15"
rand = "0.8"
rand_chacha = "0.3"

# Parallelism
rayon = "1.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_yaml = "0.9"
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Optional visualization
plotters = { version = "0.3", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[features]
default = []
visualization = ["plotters"]

[[bench]]
name = "simulation"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
