[package]
name = "primordial"
version = "2.0.0"
edition = "2021"
authors = ["Gabriele (dbowie)"]
description = "High-performance ecosystem simulator with NEAT-style neural networks"
license = "MIT"

[dependencies]
# Core math
ndarray = "0.15"
rand = "0.8"
rand_chacha = "0.3"

# Parallelism
rayon = "1.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_yaml = "0.9"
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Optional visualization
plotters = { version = "0.3", optional = true }

# Database (optional)
tokio = { version = "1.35", features = ["rt-multi-thread"], optional = true }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"], optional = true }
uuid = { version = "1.6", features = ["v4", "serde"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
anyhow = { version = "1.0", optional = true }

# GUI dependencies
egui = { version = "0.27", optional = true }
eframe = { version = "0.27", optional = true, default-features = false, features = ["default_fonts", "glow"] }
egui_plot = { version = "0.27", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.10"

[features]
default = []
visualization = ["plotters"]
gui = ["egui", "eframe", "egui_plot"]
database = ["tokio", "sqlx", "uuid", "chrono", "anyhow"]

[[bin]]
name = "multi-env-test"
path = "src/bin/multi_env_test.rs"

[[bin]]
name = "primordial-gui"
path = "src/bin/gui.rs"
required-features = ["gui"]

[[bench]]
name = "simulation"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
